--- a/01_JavaScript_Esencial/index.html
+++ b/01_JavaScript_Esencial/index.html
@@ -7,7 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/app.js"></script>
     <script>
-        alert('¡Hola Mundo!');
+        /*alert('¡Hola Mundo!');
+
+        var nombre="Alejandro";
+        console.log('El nombre es: ', nombre);*/
     </script>
 </head>
 <body>
