--- a/01_JavaScript_Esencial/index.html
+++ b/01_JavaScript_Esencial/index.html
@@ -1,19 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
-    <title>Document</title>
+    <title>Index</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="js/app.js"></script>
+    <!-- <script src="js/app.js"></script>
     <script>
         /*alert('¡Hola Mundo!');
 
         var nombre="Alejandro";
         console.log('El nombre es: ', nombre);*/
-    </script>
+    </script> -->
+    <style>
+        div {
+            width: 200px;
+            height: 50px;
+            background-color: chocolate;
+            text-align: center;
+            padding: 2%;
+            margin: 0 auto;
+            color: white;
+            border-radius: 10px;
+            box-shadow: 5px 5px 5px gray;
+            cursor: pointer;
+        }
+    </style>
 </head>
+
 <body>
-    
+    <!-- Sé utilizó para los ejemplos con los botones. -->
+    <!-- <div class="boton">
+        Da click para obtener el contenido
+    </div> -->
+    <!-- Sé utilizó para los ejemplos con los eventos multimedia. -->
+    <video class="bostonVideo" width="500" controls>
+        <source src="boston.mp4" type="video/mp4">
+    </video>
+    <script src="js/app.js"></script>    
 </body>
+
 </html>
