--- a/01_JavaScript_Esencial/index.html
+++ b/01_JavaScript_Esencial/index.html
@@ -31,13 +31,19 @@
 
 <body>
     <!-- Sé utilizó para los ejemplos con los botones. -->
-    <!-- <div class="boton">
+     <!-- <div class="boton">
         Da click para obtener el contenido
     </div> -->
+    <!-------------------------------------------------------------->
+    <!-------------------------------------------------------------->
+    <!-------------------------------------------------------------->
     <!-- Sé utilizó para los ejemplos con los eventos multimedia. -->
-    <video class="bostonVideo" width="500" controls>
+    <!-- <video class="bostonVideo" width="500" controls>
         <source src="boston.mp4" type="video/mp4">
-    </video>
+    </video> -->
+    <!-------------------------------------------------------------->
+    <!-------------------------------------------------------------->
+    <!-------------------------------------------------------------->
     <script src="js/app.js"></script>    
 </body>
 
