--- a/01_JavaScript_Esencial/index.html
+++ b/01_JavaScript_Esencial/index.html
@@ -13,7 +13,7 @@
         var nombre="Alejandro";
         console.log('El nombre es: ', nombre);*/
     </script> -->
-    <style>
+    <!-- <style>
         div {
             width: 200px;
             height: 50px;
@@ -26,7 +26,7 @@
             box-shadow: 5px 5px 5px gray;
             cursor: pointer;
         }
-    </style>
+    </style> -->
 </head>
 
 <body>
@@ -44,7 +44,116 @@
     <!-------------------------------------------------------------->
     <!-------------------------------------------------------------->
     <!-------------------------------------------------------------->
-    <script src="js/app.js"></script>    
+    <!-- Sé utilizó para los ejemplos con arreglos. -->     
+     <!-- <div class="platillos">
+        <p>Ceviche</p>
+        <p>Tacos</p>
+        <p>Pasta</p>
+    </div>
+    <script src="js/app.js"></script>     -->
+
+
+    <!-------------------------------------------------------------->
+    <!-- Sé utilizó para los ejemplos del DOM y BOM. -->
+    <h1 class="title">Lorem ipsum</h1>
+    <button id="boton">¡Púlsame!</button>
+    <div id="container">
+        <p class="principal">
+            Parrafo 1 <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sapien nulla, tincidunt nec ante
+            ut, porta tempus dui. Integer consequat rhoncus tempus. Etiam nulla nisl, mattis a nisl pulvinar, tempor elementum
+            lectus. Morbi sed tortor luctus, faucibus dolor eu, ullamcorper arcu. Aenean condimentum quis nisi et malesuada.
+            Morbi nec mi et turpis condimentum suscipit quis vel arcu. Vestibulum at mi vitae urna gravida consectetur. Nam
+            suscipit ac purus a bibendum.
+        </p>
+        <!-- <p>
+            Parrafo 2 <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sapien nulla, tincidunt nec ante
+            ut, porta tempus dui. Integer consequat rhoncus tempus. Etiam nulla nisl, mattis a nisl pulvinar, tempor elementum
+            lectus. Morbi sed tortor luctus, faucibus dolor eu, ullamcorper arcu. Aenean condimentum quis nisi et malesuada.
+            Morbi nec mi et turpis condimentum suscipit quis vel arcu. Vestibulum at mi vitae urna gravida consectetur. Nam
+            suscipit ac purus a bibendum.
+        </p>
+        <p>
+            Parrafo 3 <br> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sapien nulla, tincidunt nec ante
+            ut, porta tempus dui. Integer consequat rhoncus tempus. Etiam nulla nisl, mattis a nisl pulvinar, tempor elementum
+            lectus. Morbi sed tortor luctus, faucibus dolor eu, ullamcorper arcu. Aenean condimentum quis nisi et malesuada.
+            Morbi nec mi et turpis condimentum suscipit quis vel arcu. Vestibulum at mi vitae urna gravida consectetur. Nam
+            suscipit ac purus a bibendum.
+        </p> -->
+    </div>
+    <!-- <script>
+        //********************************
+        //*** Entendiendo el DOM y el BOM
+        var boton = document.getElementById("boton");
+
+        boton.addEventListener('click', function () {
+            console.log(window.location.href);
+            window.location.href = 'http://github.com/yacafx';
+        })
+    </script> -->
+
+    <!-- <script>
+    //********************************
+    //*** Propiedades y métodos del DOM
+
+        var boton = document.getElementById("boton");
+
+        var todosLosParrafos = document.getElementsByTagName('p');
+        //var parrafoPorClase = document.getElementsByClassName('principal');
+        //var parrafoPorClase = document.getElementsByClassName('principal')[0];
+        var parrafoPorClase = document.getElementsByClassName('principal')[0].textContent;
+
+        var foto = document.createElement('img');
+        foto.src = "foto1.jpg";
+        foto.name = "foto1";
+        foto.width = 400;
+        document.body.appendChild(foto);
+
+        foto.addEventListener('click', function () {
+            if (this.name === 'foto1') {
+                this.src = 'foto2.jpg';
+                this.name = 'foto2';
+                boton.style.backgroundColor = "green" //"Lightskyblue";//"green";
+                boton.style.color = "white";
+                boton.style.width = "200px";
+            } else {
+                this.src = 'foto1.jpg';
+                this.name = 'foto1';
+                boton.style.backgroundColor = "gold";
+                boton.style.color = "white";
+                boton.style.width = "200px";
+            }
+        })
+
+        boton.addEventListener('click', function () {
+            //console.log(todosLosParrafos)
+            //console.log(parrafoPorClase)
+            boton.style.backgroundColor = "green";
+            boton.style.color = "white";
+            boton.style.width = "200px";
+        })
+    </script> -->
+
+    <script>
+        //********************************
+        //*** Propiedades y métodos del BOM
+        var boton = document.getElementById('boton');
+        var principal = document.getElementsByClassName('principal')[0];
+
+        console.log('innerHeight: ', window.innerHeight);
+        console.log('innerWidth: ', window.innerWidth);
+
+        localStorage.setItem('contenido', 'Código y café es una gran combinación')
+
+
+        boton.addEventListener('click', function () {
+            var contenido = localStorage.getItem('contenido');
+            principal.innerHTML = contenido;
+
+            window.history.forward();
+             window.history.back();
+            window.history.go(3);
+        })
+    </script>    
 </body>
 
 </html>
