--- a/01_JavaScript_Esencial/index.html
+++ b/01_JavaScript_Esencial/index.html
@@ -48,6 +48,27 @@
             font-weight: bold;
             background-color: steelblue;
         }
+        img {
+            border: 1px solid gray;
+            margin: 5px;
+            background-color: #ccc;
+        }
+
+        #mensajes {
+            width: 90%;
+            height: 50px;
+            margin: 0 auto;
+            background-color: lightcoral;
+            margin-top: 10px;
+            padding: 10px;
+            border-radius: 5px;
+            color: white;
+            text-align: center;
+        }
+
+        .hide {
+            display: none;
+        }
     </style>
 </head>
 
@@ -55,9 +76,11 @@
     <button id="boton">Traer datos</button>
     <!-- <div id="contenedor">
     </div> -->
+    <!-- <div id="mensajes" class="hide"></div> -->
     
     <h1>Banderas</h1>
     <div id="banderas"></div>
+    
     <hr>
     <h1>POSTS</h1>
     <div id="contenedor"></div>
