--- a/01_JavaScript_Buenas_Practicas/5 - Organización de código/5.1 - consultas_innecesarias/index.html
+++ b/01_JavaScript_Buenas_Practicas/5 - Organización de código/5.1 - consultas_innecesarias/index.html
@@ -9,6 +9,9 @@
 
 <body>
     <button id="btnSaludar">Saludar</button>
+    <!-- Es recomendable enviar todo el código ajvascript al final del body, ya que en esta instancia
+    ya se tienen cargados todos los elemntos con los que se puede trabajar dentro de la página.
+    La siguiente línea se movió del reblgón 7 a donde se encuentra actualmente.-->
     <script type="text/javascript" src="app.js"></script>
 </body>
 
